# intersection

./: .gitignore  CIRCLE_DIAGONAL_TEST_RESULTS.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  DE_CASTELJAU_EXPLAINED.md  EQUATION_BERNSTEIN_COEFFICIENTS.md  HOW_TO_GET_BERNSTEIN_COEFFICIENTS.md  IMPLEMENTATION_STATUS.md  METHOD_ARCHITECTURE.md  NEW_DESIGN_SUMMARY.md  NORMALIZATION_STRATEGY.md  N_DIMENSIONAL_DESIGN.md  POLYNOMIAL_SYSTEM_UPDATE.md  PP_ALGORITHM_EXPLAINED.md  PROJECT_SUMMARY.md  PYCHARM_SETUP.md  PYTEST_TESTS_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_ND.md  README.md  README_STANDALONE_SOLVER.md  SETUP_COMPLETE.md  SOLVER_REDESIGN_SUMMARY.md  SYNC_GUIDE.md  TESTING.md  TOLERANCE_CLASSIFICATION.md  WORKFLOW_VERIFICATION.md  example_get_bernstein_coeffs.py  pyproject.toml  requirements.txt  setup.py  test_circle_diagonal.py  test_circle_sphere.py  test_new_nd_design.py  test_polynomial_system.py
.run/: Python.run.xml  pytest.run.xml
docs/: PP_METHOD_VISUALIZATION.md  STANDALONE_SOLVER.md
examples/: MULTIPLICITY_TEST_RESULTS.md  README.md  benchmark_examples.py  benchmark_results.txt  benchmark_solver.py  create_comparison_diagram.py  debug_2d_detailed.py  debug_2d_system.py  debug_pp_bounds.py  debug_pp_step_by_step.py  debug_projection.py  debug_subdivision_visualizer.py  demo_projection_walls.py  example_2d.py  example_3d.py  example_convex_hull_demo.py  example_convex_hull_pp.py  example_de_casteljau.py  example_get_bernstein_coeffs.py  example_normalization.py  example_pp_algorithm.py  example_pp_nd_demo.py  example_standalone_solver.py  (+30 more)
(+59 files in other folders)
